syntax = "proto3";

package notification;

import "google/protobuf/timestamp.proto";

message SendRequest {
  oneof msg {
    EmailMessage email  = 1;
    SmsMessage   sms    = 2;
    InAppMessage in_app = 3;
  }
}

message EmailMessage {
  string          message_id = 1;
  string          from       = 2;
  repeated string to         = 3;
  string          subject    = 4;
  string          body       = 5;
}

message SmsMessage {
  string          message_id = 1;
  string          from       = 2;
  repeated string to         = 3;
  string          body       = 4;
}

message InAppMessage {
  string message_id = 1;
  string device_id  = 2;
  string title      = 3;
  string body       = 4;
}

message SendResponse {
  string                    message_id = 1;
  google.protobuf.Timestamp timestamp  = 2;
}
